index.html updated

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
 <script>
 
+	//make it show!!
+
 var scene, camera, renderer, clock, deltaTime, totalTime;
 
 var arToolkitSource, arToolkitContext;
